WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148716
MutationObserver should accept attributeFilter, attributeOldValue, and characterDataOldValue on their own
https://bugs.webkit.org/show_bug.cgi?id=148716
Summary
MutationObserver should accept attributeFilter, attributeOldValue, and charac...
Ryosuke Niwa
Reported
2015-09-02 10:31:19 PDT
Right now MutationObserver require attributes to be present when attributeFilter and attributeOldValue are set, and characterData when characterDataOldValue is set but DOM4 implicitly set those attributes now.
Attachments
Fixes the bug
(9.11 KB, patch)
2015-09-02 10:38 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2015-09-02 10:38:24 PDT
Created
attachment 260424
[details]
Fixes the bug
Chris Dumez
Comment 2
2015-09-02 10:47:59 PDT
Comment on
attachment 260424
[details]
Fixes the bug r=me
Ryosuke Niwa
Comment 3
2015-09-02 13:51:21 PDT
<
rdar://problem/22545128
>
WebKit Commit Bot
Comment 4
2015-09-02 15:42:06 PDT
Comment on
attachment 260424
[details]
Fixes the bug Rejecting
attachment 260424
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 260424, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ', 'dcommit', '--rmdir']" exit_code: 139 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... Authentication realm: <
http://svn.webkit.org:80
> Mac OS Forge Password for '
commit-queue@webkit.org
': Authentication realm: <
http://svn.webkit.org:80
> Mac OS Forge Username: error: git-svn died of signal 11 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 139 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
http://webkit-queues.webkit.org/results/134352
WebKit Commit Bot
Comment 5
2015-09-02 20:08:20 PDT
Comment on
attachment 260424
[details]
Fixes the bug Clearing flags on attachment: 260424 Committed
r189271
: <
http://trac.webkit.org/changeset/189271
>
WebKit Commit Bot
Comment 6
2015-09-02 20:08:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug