MutationObserver should accept attributeFilter, attributeOldValue, and characterDataOldValue on their own https://bugs.webkit.org/show_bug.cgi?id=148716

Reviewed by Chris Dumez.

Source/WebCore:

According to DOM4 [1], MutationObserver accepts characterDataOldValue, attributeOldValue and attributeFilter options
on their own when characterData and attributes options are omitted. It throws only when characterData and attributes
options are explicitly set to false.

Fixed our implementation accordingly. Existing tests as well as ones imported from W3C covers this.

[1] http://www.w3.org/TR/2015/WD-dom-20150618/#interface-mutationobserver

* dom/MutationObserver.cpp:
(WebCore::MutationObserver::observe):

LayoutTests:

Updated the expected results.

Also added test cases to make sure explicitly setting attributes and characterData options to false along
with attributeOldValue, attributeFilter, and characterDataOldValue would throw.

* fast/dom/MutationObserver/observe-exceptions-expected.txt:
* fast/dom/MutationObserver/observe-exceptions.html:
* http/tests/w3c/dom/nodes/MutationObserver-attributes-expected.txt:
* http/tests/w3c/dom/nodes/MutationObserver-characterData-expected.txt:


Canonical link: https://commits.webkit.org/166849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189271 268f45cc-cd09-0410-ab3c-d52691b4dbfc